--- a/src/nucs.JsonSettings.csproj
+++ b/src/nucs.JsonSettings.csproj
@@ -29,6 +29,9 @@
     <PackageReference Include="System.AppDomain">
       <Version>2.0.11</Version>
     </PackageReference>
+    <PackageReference Include="System.Security.SecureString">
+      <Version>4.3.0</Version>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
