--- a/examples/nucs.JsonSettings.Examples.csproj
+++ b/examples/nucs.JsonSettings.Examples.csproj
@@ -49,7 +49,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="SettingsBag.cs" />
+    <Compile Include="EncryptedSettingsBag.cs" />
+    <Compile Include="EncryptedJsonSettings.cs" />
+    <Compile Include="JsonSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -75,7 +78,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\nucs.Settings\src\nucs.JsonSettings.csproj">
+    <ProjectReference Include="..\src\nucs.JsonSettings.csproj">
       <Project>{77ea72c1-d15f-472f-978f-c59a6da43be4}</Project>
       <Name>nucs.JsonSettings</Name>
     </ProjectReference>
