--- a/tests/nucs.JsonSettings.xTests/nucs.JsonSettings.xTests.csproj
+++ b/tests/nucs.JsonSettings.xTests/nucs.JsonSettings.xTests.csproj
@@ -1,17 +1,20 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;netstandard1.6;net45;net462;net461;net47;netcoreapp2.0</TargetFrameworks>
+    <TargetFrameworks>netstandard1.6;netstandard2.0;net45;net462;net461;net47;netcoreapp2.0</TargetFrameworks>
     <IsPackable>false</IsPackable>
+    <ApplicationIcon />
+    <OutputType>Library</OutputType>
+    <StartupObject />
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentAssertions" Version="4.19.4" />
-    <PackageReference Include="Microsoft.CSharp" Version="4.4.1" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.7.0" />
-    <PackageReference Include="System.Dynamic.Runtime" Version="4.3.0" />
-    <PackageReference Include="xunit" Version="2.3.1" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
+  <PackageReference Include="FluentAssertions" Version="4.19.4" />
+  <PackageReference Include="Microsoft.CSharp" Version="4.4.1" />
+  <PackageReference Include="System.Dynamic.Runtime" Version="4.3.0" />
+  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.7.0" />
+  <PackageReference Include="NUnit" Version="3.10.1" />
+  <PackageReference Include="NUnit3TestAdapter" Version="3.10.0" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
