--- a/tests/nucs.JsonSettings.xTests/nucs.JsonSettings.xTests.csproj
+++ b/tests/nucs.JsonSettings.xTests/nucs.JsonSettings.xTests.csproj
@@ -64,6 +64,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\Autosave\nucs.JsonSettings.Autosave.csproj" />
     <ProjectReference Include="..\..\src\nucs.JsonSettings.csproj" />
   </ItemGroup>
 
