--- a/src/Autosave/nucs.JsonSettings.Autosave.csproj
+++ b/src/Autosave/nucs.JsonSettings.Autosave.csproj
@@ -2,7 +2,6 @@
 
   <PropertyGroup>
 	<AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
-    <TargetFrameworks>netstandard2.0;netstandard1.6;net4;net45;net462;net461;net47;netcoreapp2.0</TargetFrameworks>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
     <FileVersion>1.0.0.0</FileVersion>
     <Version>1.0.0</Version>
@@ -20,6 +19,7 @@ Encrypt, Encode and have full control over hardcoded / dynamic settings.</Summar
     <NeutralLanguage />
     <SignAssembly>false</SignAssembly>
     <Copyright></Copyright>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|netstandard1.6|AnyCPU'">
@@ -31,8 +31,9 @@ Encrypt, Encode and have full control over hardcoded / dynamic settings.</Summar
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
-    <PackageReference Include="Castle.Core" Version="4.2.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Castle.Core" Version="4.4.1" />
+    <PackageReference Include="System.Security.SecureString" Version="4.3.0" />
   </ItemGroup>
 
   <PropertyGroup Condition="'$(TargetFramework)' == 'netcoreapp2.0'">
@@ -67,9 +68,6 @@ Encrypt, Encode and have full control over hardcoded / dynamic settings.</Summar
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard1.6'">
     <PackageReference Include="System.AppDomain">
       <Version>2.0.11</Version>
-    </PackageReference>
-    <PackageReference Include="System.Security.SecureString">
-      <Version>4.3.0</Version>
     </PackageReference>
   </ItemGroup>
 
