--- a/tests/nucs.JsonSettings.Tests/nucs.JsonSettings.Tests.csproj
+++ b/tests/nucs.JsonSettings.Tests/nucs.JsonSettings.Tests.csproj
@@ -1,23 +1,23 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard1.6;netstandard2.0;net45;net462;net461;net47;netcoreapp2.0</TargetFrameworks>
     <IsPackable>false</IsPackable>
     <ApplicationIcon />
     <OutputType>Library</OutputType>
     <StartupObject />
+    <RootNamespace>nucs.JsonSettings.xTests</RootNamespace>
+    <TargetFramework>net48</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
   <PackageReference Include="FluentAssertions" Version="4.19.4" />
-  <PackageReference Include="Microsoft.CSharp" Version="4.4.1" />
-  <PackageReference Include="System.Dynamic.Runtime" Version="4.3.0" />
-  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.7.0" />
-  <PackageReference Include="NUnit" Version="3.10.1" />
-  <PackageReference Include="NUnit3TestAdapter" Version="3.10.0" />
+  <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.1" />
+  <PackageReference Include="NUnit" Version="3.9.0" />
+  <PackageReference Include="NUnit3TestAdapter" Version="3.13.0" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
   <PropertyGroup Condition="'$(TargetFramework)' == 'netcoreapp2.0'">
