--- a/examples/JsonSettings.Examples.csproj
+++ b/examples/JsonSettings.Examples.csproj
@@ -36,11 +36,8 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed">
-      <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -53,6 +50,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ComplexObjects.cs" />
+    <Compile Include="INotifyPropertyChangedExample.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="SettingsBag.cs" />
     <Compile Include="EncryptedSettingsBag.cs" />
     <Compile Include="EncryptedJsonSettings.cs" />
@@ -61,13 +61,20 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\src\Autosave\JsonSettings.Autosave.csproj">
+      <Project>{d6c73fb9-033b-44d8-bc0e-85dc6eff8cde}</Project>
+      <Name>JsonSettings.Autosave</Name>
+    </ProjectReference>
     <ProjectReference Include="..\src\JsonSettings.csproj">
       <Project>{4040992b-f808-4875-b881-8c3a4397d8d3}</Project>
       <Name>JsonSettings</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Castle.Core" Version="4.4.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
