--- a/src/JsonSettings.csproj
+++ b/src/JsonSettings.csproj
@@ -45,12 +45,8 @@ Encrypt, Encode and have full control over hardcoded / dynamic settings.</Descri
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3">
-      <PrivateAssets>all</PrivateAssets>
-    </ProjectReference>
-    <PackageReference Include="System.Security.SecureString" Version="4.3.0">
-      <PrivateAssets>all</PrivateAssets>
-    </ProjectReference>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="System.Security.SecureString" Version="4.3.0" />
   </ItemGroup>
 
   <PropertyGroup Condition="'$(TargetFramework)' == 'netcoreapp2.0'">
