--- a/src/JsonSettings.csproj
+++ b/src/JsonSettings.csproj
@@ -28,6 +28,7 @@ Encrypt, Encode and have full control over hardcoded / dynamic settings.</Descri
     <PackageReleaseNotes>- Upgraded to .NETCore project type
 - Target changed to .NET Standard 2.0
 - Root namespace renamed to Nucs.</PackageReleaseNotes>
+    <LangVersion>8</LangVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|netstandard1.6|AnyCPU'">
