--- a/examples/JsonSettings.Examples.csproj
+++ b/examples/JsonSettings.Examples.csproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{A1D62AE9-2103-413B-BAFE-CD5F2BCB5DA5}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>nucs.JsonSettings.Examples</RootNamespace>
+    <RootNamespace>Nucs.JsonSettings.Examples</RootNamespace>
     <AssemblyName>JsonSettings.Examples</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -58,6 +58,7 @@
     <Compile Include="EncryptedJsonSettings.cs" />
     <Compile Include="JsonSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Versioning.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
