--- a/src/Autosave/JsonSettings.Autosave.csproj
+++ b/src/Autosave/JsonSettings.Autosave.csproj
@@ -20,8 +20,8 @@ Encrypt, Encode and have full control over hardcoded / dynamic settings.</Summar
     <SignAssembly>false</SignAssembly>
     <Copyright>Eli Belash @ 2021</Copyright>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <RootNamespace>nucs.JsonSettings.Autosave</RootNamespace>
-    <PackageId>nucs.JsonSettings.Autosave</PackageId>
+    <RootNamespace>Nucs.JsonSettings.Autosave</RootNamespace>
+    <PackageId>Nucs.JsonSettings.Autosave</PackageId>
     <PackageVersion>2.0.0-alpha3</PackageVersion>
     <Title>Nucs.JsonSettings.Autosave</Title>
     <PackageReleaseNotes>- Upgraded to .NETCore project type
