--- a/examples/JsonSettings.Examples.csproj
+++ b/examples/JsonSettings.Examples.csproj
@@ -1,81 +1,50 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A1D62AE9-2103-413B-BAFE-CD5F2BCB5DA5}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>Nucs.JsonSettings.Examples</RootNamespace>
-    <AssemblyName>JsonSettings.Examples</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <TargetFrameworkProfile />
+	<AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
+    <AssemblyVersion>2.0.0.3</AssemblyVersion>
+    <FileVersion>2.0.0.3</FileVersion>
+    <Version>2.0.0.3</Version>
+    <Authors>Nucs / Eli Belash</Authors>
+    <Company>Nucs / Eli Belash</Company>
+	  <Summary>An extension to JsonSettings that allows to wrap a class via transparent proxy that autosaves. Support for Autosaving on INotifyPropertyChanged/INotifyCollectionChanged.</Summary>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageLicenseUrl>https://github.com/Nucs/JsonSettings/blob/master/LICENSE</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/Nucs/JsonSettings</PackageProjectUrl>
+    <PackageIconUrl>https://i.imgur.com/BOExs52.png</PackageIconUrl>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <Description>An extension to JsonSettings that allows to wrap a class via transparent proxy that autosaves. Support for Autosaving on INotifyPropertyChanged/INotifyCollectionChanged.</Description>
+    <PackageTags>nucs config file newtonsoft settings json configuration preferences</PackageTags>
+    <NeutralLanguage />
+    <SignAssembly>false</SignAssembly>
+    <Copyright>Eli Belash @ 2021</Copyright>
+    <RootNamespace>Nucs.JsonSettings</RootNamespace>
+    <PackageId></PackageId>
+    <PackageVersion></PackageVersion>
+    <Title></Title>
+    <PackageReleaseNotes>- Upgraded to .NETCore project type
+- Target changed to .NET Standard 2.0
+- Root namespace renamed to Nucs.</PackageReleaseNotes>
+    <LangVersion>latest</LangVersion>
+    <IsPackable>false</IsPackable>
+	<OutputType>Exe</OutputType>
+	<UseWindowsForms>true</UseWindowsForms>
+	<TargetFramework>net5.0-windows</TargetFramework>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;NET;NET47</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Configuration" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Deployment" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="ComplexObjects.cs" />
-    <Compile Include="INotifyPropertyChangedExample.cs" />
-    <Compile Include="Program.cs" />
-    <Compile Include="SettingsBag.cs" />
-    <Compile Include="EncryptedSettingsBag.cs" />
-    <Compile Include="EncryptedJsonSettings.cs" />
-    <Compile Include="JsonSettings.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Versioning.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\src\Autosave\JsonSettings.Autosave.csproj">
-      <Project>{d6c73fb9-033b-44d8-bc0e-85dc6eff8cde}</Project>
-      <Name>JsonSettings.Autosave</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\src\JsonSettings.csproj">
-      <Project>{4040992b-f808-4875-b881-8c3a4397d8d3}</Project>
-      <Name>JsonSettings</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Castle.Core" Version="4.4.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Castle.Core" Version="4.4.1" />
+    <PackageReference Include="System.Security.SecureString" Version="4.3.0" />
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+
+  <ItemGroup>
+    <ProjectReference Include="..\src\Autosave\JsonSettings.Autosave.csproj" />
+    <ProjectReference Include="..\src\JsonSettings.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Properties" />
+  </ItemGroup>
+
 </Project>
