Build: Released 2.0.0-alpha4

--- a/src/Autosave/JsonSettings.Autosave.csproj
+++ b/src/Autosave/JsonSettings.Autosave.csproj
@@ -2,9 +2,8 @@
 
   <PropertyGroup>
 	<AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
-    <AssemblyVersion>2.0.0.3</AssemblyVersion>
-    <FileVersion>2.0.0.3</FileVersion>
-    <Version>2.0.0.3</Version>
+    <AssemblyVersion>2.0.0.4</AssemblyVersion>
+    <FileVersion>2.0.0.4</FileVersion>
     <Authors>Nucs / Eli Belash</Authors>
     <Company>Nucs / Eli Belash</Company>
 	  <Summary>An extension to JsonSettings that allows to wrap a class via transparent proxy that autosaves. Support for Autosaving on INotifyPropertyChanged/INotifyCollectionChanged.</Summary>
@@ -21,11 +20,24 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>Nucs.JsonSettings.Autosave</RootNamespace>
     <PackageId>Nucs.JsonSettings.Autosave</PackageId>
-    <PackageVersion>2.0.0-alpha3</PackageVersion>
+    <PackageVersion>2.0.0-alpha4</PackageVersion>
     <Title>Nucs.JsonSettings.Autosave</Title>
-    <PackageReleaseNotes>- Upgraded to .NETCore project type
-- Target changed to .NET Standard 2.0
-- Root namespace renamed to Nucs.</PackageReleaseNotes>
+    <PackageReleaseNotes>- Added RecoveryModule  and .WithRecovery to capture parsing errors
+- Added JsonSettings.SuspendAutosave() extension
+- Added proxy construction guard to prevent unncessary allocation on proxy creation.
+- Fix non virtual built-in properties returning null after being wrapped with proxy.
+- Added ProxyGeneratedAttribute that is attached to every proxy-generated class
+- Module: made Dispose() inheritable.
+- Module.Socket: changed to WeakReference&lt;JsonSettings&gt;
+- SettingsBag: added support for SuspendAutosave #26
+- VersioningModule: some internal fixes and renames #19
+- Added RecoveryModule and WithRecovery api. #19
+- JsonSettings: added TryingRecover and Recovered events.
+- JsonSettings: Removed ThrowOnEmptyFile, this is handled by RecoveryModule now
+- Made all module functions and variables protected or virtual.
+- FluentJsonSettings: replaced dynamic creation with hardcoded creation (faster).
+- Added proper Versioning example
+- JsonSettings: add OnXXXX methods that trigger event changed to protected internal.</PackageReleaseNotes>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
