--- a/src/JsonSettings.csproj
+++ b/src/JsonSettings.csproj
@@ -2,9 +2,8 @@
 
   <PropertyGroup>
 	<AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
-    <AssemblyVersion>2.0.0.3</AssemblyVersion>
-    <FileVersion>2.0.0.3</FileVersion>
-    <Version>2.0.0.3</Version>
+    <AssemblyVersion>2.0.0.4</AssemblyVersion>
+    <FileVersion>2.0.0.4</FileVersion>
     <Authors>Nucs / Eli Belash</Authors>
     <Company>Nucs / Eli Belash</Company>
 	<Summary>Easiest way you'll ever write settings for your app. Cross-platform, modular and still a one-liner.
@@ -22,11 +21,24 @@ Encrypt, Encode and have full control over hardcoded / dynamic settings.</Summar
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>Nucs.JsonSettings</RootNamespace>
     <PackageId>nucs.JsonSettings</PackageId>
-    <PackageVersion>2.0.0-alpha3</PackageVersion>
+    <PackageVersion>2.0.0-alpha4</PackageVersion>
     <Title>Nucs.JsonSettings</Title>
-    <PackageReleaseNotes>- Added VersioningModule and .WithVersioning to enforce version change
-- JsonSettings/ISavable: added .LoadDefault, virtual LoadJson, virtual ToJson
-- All module events now additionally pass 'JsonSettings sender'</PackageReleaseNotes>
+    <PackageReleaseNotes>- Added RecoveryModule  and .WithRecovery to capture parsing errors
+- Added JsonSettings.SuspendAutosave() extension
+- Added proxy construction guard to prevent unncessary allocation on proxy creation.
+- Fix non virtual built-in properties returning null after being wrapped with proxy.
+- Added ProxyGeneratedAttribute that is attached to every proxy-generated class
+- Module: made Dispose() inheritable.
+- Module.Socket: changed to WeakReference&lt;JsonSettings&gt;
+- SettingsBag: added support for SuspendAutosave #26
+- VersioningModule: some internal fixes and renames #19
+- Added RecoveryModule and WithRecovery api. #19
+- JsonSettings: added TryingRecover and Recovered events.
+- JsonSettings: Removed ThrowOnEmptyFile, this is handled by RecoveryModule now
+- Made all module functions and variables protected or virtual.
+- FluentJsonSettings: replaced dynamic creation with hardcoded creation (faster).
+- Added proper Versioning example
+- JsonSettings: add OnXXXX methods that trigger event changed to protected internal.</PackageReleaseNotes>
     <LangVersion>9</LangVersion>
     <Nullable>enable</Nullable>
   </PropertyGroup>
